# zap-task

./: .dockerignore  .env.example  .env.test  .flake8  .gitignore  Dockerfile  LICENSE  README.md  compose.test.yml  compose.yml  conftest.py  pyproject.toml
.github/workflows/: main.yml
apps/core/: exceptions.py  models.py  tasks.py
apps/payments/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py
apps/payments/tests/: test_payments_services.py
apps/proposals/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/proposals/migrations/: 0001_initial.py  0002_alter_proposal_created_at_alter_proposal_freelancer_and_more.py  0003_alter_proposal_status.py
apps/proposals/tests/: conftest.py  test_proposals_models.py  test_proposals_services.py  test_proposals_views.py
apps/reviews/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/reviews/migrations/: 0001_initial.py  0002_remove_review_updated_at.py  0003_alter_review_comment_alter_review_created_at_and_more.py
apps/reviews/tests/: conftest.py  test_reviews_signals.py  test_reviews_views.py
apps/tasks/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_alter_task_price.py  0002_alter_task_status.py  0003_alter_task_client_alter_task_created_at_and_more.py  0004_alter_task_status.py  0005_alter_task_status.py
apps/tasks/tests/: conftest.py  test_proposals_views.py  test_tasks_models.py  test_tasks_services.py  test_tasks_tasks.py  test_tasks_views.py  test_views.py
apps/users/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_average_rating.py  0003_alter_user_average_rating_alter_user_created_at_and_more.py  0004_user_bio.py
apps/users/tests/: test_managers.py  test_users_views.py  test_views.py
config/: __init__.py  celery.py  settings.py  urls.py
